Adding screen recording button in quick setting like iOS 12 has
Adding screen recording button in quick setting like iOS 12 has in control center

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,12 @@
     <string name="main_screen_action">Record screen</string>
     <!-- Sound record title -->
     <string name="main_sound_action">Record sound</string>
-
+	
+	<!-- Toast stopping screen recording service -->
+    <string name="toast_stop_screen_recording_message">Stopping screen @string/sound_recording_title_working service</string>
+	<!-- Toast startting screen recording service -->
+    <string name="toast_start_screen_recording_message">Startting screen @string/sound_recording_title_working service</string>
+	
     <!-- Transition name for dialogActivity -->
     <string name="transition_dialog_name" translatable="false">transition_dialog_activity</string>
 </resources>
