Recorder: Introduce QS Tile
click for launch screen recorder overlay, long click for launch
recorder activity

icon from materialdesignicons.com

Change-Id: Ibdf71a2a434b1404237f48af67b0d2c41ffdc721
Signed-off-by: DennySPB <dennyspb@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,8 @@
     <!-- Permissions -->
     <!-- Permissions dialog title -->
     <string name="dialog_permissions_title">Permissions</string>
+    <!-- Message: storage access denied -->
+    <string name="dialog_permissions_storage">Recorder needs storage access to save recorded files</string>
     <!-- Message: microphone access denied -->
     <string name="dialog_permissions_mic">Recorder needs microphone permission to record audio</string>
     <!-- Message: phone status denied -->
